<resources>
    <string name="facebook_app_id">1159387085370302</string>
    <string name="fb_login_protocol_scheme">fb1159387085370302</string>
    <string name="facebook_client_token">8b7b12ba9a146c1563472da052547e87</string>
    <string name="app_name">The Librarian Cat</string>
    <string name="EmailLabel">Ingrese su correo</string>
    <string name="PasswordLabel">Ingrese su contraseña</string>
    <string name="NameLabel">Nombres</string>
    <string name="LastNameLabel">Apellidos</string>
    <string name="ConfirmPasswordLabel">Confirmar contraseña</string>
    <string name="UsernameLabel">Nombre de Usuario</string>
    <string name="UsernameLabel2">Ingrese su Nombre de Usuario</string>
    <string name="LoginButtonLabel">Iniciar sesión</string>
    <string name="LoginInsteadButtonLabel"><u>¿Ya tienes una cuenta? Inicia sesión</u></string>
    <string name="RegisterButtonLabel">Registrarse</string>
    <string name="FBLoginLabel">Ingresar con Facebook</string>
    <string name="HomeLabel">Home</string>
    <string name="BookLabel">Libros</string>
    <string name="AutorLabel">Autores</string>
    <string name="PrestamoLabel">Préstamos</string>
    <string name="PerfilLabel">Perfil</string>
    <string name="LibroHint">Buscar un Libro por Título o Autor</string>
    <string name="AutorHint">Buscar un Autor</string>
    <string name="GeneroFiltroHint">Buscar un Género</string>
    <string name="GeneroLabel">Género</string>
    <string name="SpinnerAutorHint">Seleccione un Autor</string>
    <string name="GeneroHint">Seleccione un Género</string>
    <array name="genre">
        <item>Ficción</item>
        <item>Romance</item>
        <item>Misterio</item>
        <item>Ciencia Ficción</item>
        <item>Fantasía</item>
        <item>Biografía</item>
        <item>Historia</item>
        <item>Autoayuda</item>
        <item>Aventura</item>
        <item>Terror</item>
        <item>Thriller</item>
        <item>Novela Gráfica</item>
        <item>Poesía</item>
        <item>Drama</item>
        <item>Comedia</item>
        <item>Ensayo</item>
        <item>Crimen</item>
    </array>
</resources>