<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/HomeLabel" />

    <item
        android:id="@+id/navigation_book"
        android:icon="@drawable/book"
        android:title="@string/BookLabel" />

    <item
        android:id="@+id/navigation_autor"
        android:icon="@drawable/autor"
        android:title="@string/AutorLabel" />
    <item
        android:id="@+id/navigation_prestamo"
        android:icon="@drawable/transac"
        android:title="@string/PrestamoLabel" />

    <item
        android:id="@+id/navigation_perfil"
        android:icon="@drawable/perfil"
        android:title="@string/PerfilLabel" />

</menu>