<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bonewhite"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="25dp"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="25dp"
                android:src="@drawable/fondouserregister"
                app:srcCompat="@drawable/fondouserregister" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/NameLabel"
                android:textStyle="bold" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/darkblue"
                android:hint="@string/NameLabel"
                app:startIconDrawable="@drawable/account">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/LastNameLabel"
                android:textStyle="bold" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/darkblue"
                android:hint="@string/LastNameLabel"
                app:startIconDrawable="@drawable/account">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/UsernameLabel"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/darkblue"
                android:hint="@string/UsernameLabel2"
                app:startIconDrawable="@drawable/user">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/EmailLabel"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/darkblue"
                android:hint="@string/EmailLabel"
                app:startIconDrawable="@drawable/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/PasswordLabel"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/darkblue"
                android:hint="@string/PasswordLabel"
                app:startIconDrawable="@drawable/lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ConfirmPasswordLabel"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/darkblue"
                android:hint="@string/ConfirmPasswordLabel"
                app:startIconDrawable="@drawable/lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/RegisterButton"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue"
                android:fontFamily="sans-serif"
                android:text="@string/RegisterButtonLabel"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:cornerRadius="5dp" />

            <Button
                android:id="@+id/LoginInsteadButton"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/LoginInsteadButtonLabel"
                android:textColor="@color/blue"
                android:textStyle="bold"
                app:cornerRadius="5dp" />


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>